# github-project-scorer

./: .env_template  .gitignore  Makefile  README.md  agent_factory.py  agents.md  agents.py  analyzer_tools.py  criteria.yaml  demo_interactive.py  evaluation_display.py  evaluator.py  example.py  example_criteria.yaml  file_analyzer.py  github_analyzer_tools.py  main.py  models.py  pricing.yaml  pyproject.toml  report_generator.py  repository_manager.py  test_basic.py  test_beautiful.py  test_enhanced.py  test_notebook.py  test_single.py  test_tracking.py  test_typing.py  usage_tracker.py
criteria/: README.md  ai-crash-course.yaml  de-zoomcamp.yaml  llm-zoomcamp.yaml  ml-zoomcamp.yaml  mlops-zoomcamp.yaml
reports/: Recipes_Assistant_evaluation_report.md
scorer/: __init__.py  agents.py  analyzer_tools.py  evaluator.py  main.py  models.py  report_generator.py  repository_manager.py  usage_tracker.py
tests/: conftest.py  test_analyzer_basic.py  test_models.py  test_repository_manager.py  test_usage_tracker.py
